Update java -jar command (#185)